Fix recent work entry title on small screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -786,7 +786,6 @@ recent-work h2 {
   margin: 0;
   padding: 0;
   font-weight: 200;
-  text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.12em;
   font-size: 1.35em;
